--- a/style.css
+++ b/style.css
@@ -426,6 +426,9 @@ section:not(:first-child) {
 
     color: var(--four-color);
 }
+.item__cash p {
+    max-width: 344px;
+}
 
 @media (max-width: 1022.98px) {
     .store__item {
@@ -481,8 +484,78 @@ section:not(:first-child) {
     }
 }
 
+/* ------------------------------------------------------------- */
 
+.page__category {
+}
+.category {
+}
+.category__container {
+    display: flex;
+    flex-direction: column;
+    row-gap: 86px;
+}
+.category__items {
+    display: flex;
+    justify-content: space-between; 
 
-/* main__content {
-    padding: 175px 0px 60px 0;
-} */
+}
+.category__item {
+    max-width: 25%;
+    position: relative;
+    overflow: hidden;
+    border-radius: 25px;
+    margin-bottom: 12%;
+
+    transition: box-shadow 0.3s ease;
+}
+.category__item:hover {
+    box-shadow: 0 0 20px #121212;
+}
+
+.category__img {
+    max-width: 220px;
+    max-height: 280px;
+    text-align: center;
+}
+.category__img::before {
+    content: "";
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 10;
+    background: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(18,18,18,0.65) 100%);
+}
+
+.category__img img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.category-item__title {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    z-index: 11;
+
+    padding: 30px 20px;
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 30px;
+    text-align: center;
+    width: 100%;
+
+    opacity: 0.85;
+    color: #FFFFFF;
+
+    transition: all 0.3s ease;
+}
+
+.category-item__title:hover {
+    opacity: 1;
+}
